# sydsvenskan-validate

./: Cargo.toml
src/: main.rs
static/: index.html
